--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "cloudant": "^1.6.2",
+    "d3-dsv": "^1.0.5",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "urijs": "^1.18.4"
